--- a/build.gradle
+++ b/build.gradle
@@ -31,7 +31,7 @@ plugins {
 
 if (project.hasProperty("tag")) {
     project.version = project.property("tag")
-else if (project.hasProperty("enterprise")) {
+} else if (project.hasProperty("enterprise")) {
     project.version = "4.0.0E-BETA" // craftercms enterprise version flag
 } else {
     project.version = "4.0.0-SNAPSHOT" // craftercms version flag
