Fixed build script

--- a/build.gradle
+++ b/build.gradle
@@ -91,6 +91,9 @@ ext {
         "elasticsearch",
         "solr",
         "dbms",
+        "cli",
+        "mongodb",
+        "crafter-cli",
         "apache-tomcat/work/**",
         "apache-tomcat/temp/**",
         "apache-tomcat/webapps/crafter-search*",
@@ -108,6 +111,9 @@ ext {
         "elasticsearch",
         "solr",
         "dbms",
+        "cli",
+        "mongodb",
+        "crafter-cli",
         "apache-tomcat/work/**",
         "apache-tomcat/temp/**",
         "apache-tomcat/webapps/crafter-search",
