--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,6 @@
 authoringTomcatImageName = craftercms/authoring_tomcat
 authoringTomcatWithImageMagickImageName = craftercms/authoring_tomcat_with_imagemagick
-authoringTomcatWithSolrSupportImageName = craftercms/authoring_tomcat_solr_compatible
-deliveryTomcatDockerImageName = craftercms/delivery_tomcat
-deliveryTomcatWithSolrSupportImageName = craftercms/delivery_tomcat_solr_compatible
+deliveryTomcatImageName = craftercms/delivery_tomcat
 deployerImageName = craftercms/deployer
 profileImageName = craftercms/profile
 gitSshServerImageName = craftercms/git_ssh_server
