Added missing excludes

--- a/build.gradle
+++ b/build.gradle
@@ -301,6 +301,9 @@ task buildDeployer(group: "Build", description: "Builds the Deployer Docker imag
             into "${buildDir}/bin"     
             exclude "migration"
             exclude "upgrade"
+            exclude "cli"
+            exclude "mongodb"
+            exclude "crafter-cli"
             exclude "apache-tomcat"
             exclude "elasticsearch"
             exclude "**/*.pid"
