Add missing `upgrade` in Debian based docker files
Check 'apt-get' manual entry [0] for differences between `apt-get
update` and `apt-get upgrade`.

[0] https://linux.die.net/man/8/apt-get

--- a/images/profile/Dockerfile
+++ b/images/profile/Dockerfile
@@ -18,6 +18,7 @@ ARG DEBIAN_FRONTEND=noninteractive
 
 RUN set -eux; \
     apt-get update; \
+    apt-get upgrade -y; \
     apt-get install -y gosu; \
     apt-get install -y --no-install-recommends vim; \
     apt-get install -y --no-install-recommends nano; \
