--- a/images/git_ssh_server/Dockerfile
+++ b/images/git_ssh_server/Dockerfile
@@ -13,6 +13,9 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 FROM alpine:3.16 as main
 
+# Update & Upgrade existing packages
+RUN apk update && apk upgrade
+
 # Install dependencies
 RUN apk add --no-cache bash shadow openssh git su-exec vim nano
 
