ipdate logrotate image

--- a/images/logrotate/logrotate.tpl.conf
+++ b/images/logrotate/logrotate.tpl.conf
@@ -1,8 +1,28 @@
-${LOGROTATE_PATTERN} {
+/opt/crafter/logs/*.log {
     su crafter crafter
-    rotate ${LOGROTATE_COPIES}
-    size ${LOGROTATE_SIZE}
+    rotate 10
+    size 100M
     copytruncate
     compress
     missingok
+    dateformat -%Y%m%d_%H%M%S
 }
+/opt/crafter/logs/*.text {
+    su crafter crafter
+    rotate 10
+    size 100M
+    copytruncate
+    compress
+    missingok
+    dateformat -%Y%m%d_%H%M%S
+}
+/opt/crafter/logs/*.csv {
+    su crafter crafter
+    rotate 10
+    size 100M
+    copytruncate
+    compress
+    missingok
+    dateformat -%Y%m%d_%H%M%S
+}
+
