--- a/images/logrotate/logrotate.tpl.conf
+++ b/images/logrotate/logrotate.tpl.conf
@@ -7,7 +7,7 @@
     missingok
     dateformat -%Y%m%d_%H%M%S
 }
-/opt/crafter/logs/*.text {
+/opt/crafter/logs/*.txt {
     su crafter crafter
     rotate 10
     size 100M
