--- a/images/logrotate/logrotate.tpl.conf
+++ b/images/logrotate/logrotate.tpl.conf
@@ -1,28 +1,10 @@
-/opt/crafter/logs/*.log {
+${LOGROTATE_PATTERN} {
     su crafter crafter
-    rotate 10
-    size 100M
+    rotate ${LOGROTATE_COPIES}
+    size ${LOGROTATE_SIZE}
     copytruncate
     compress
     missingok
-    dateformat -%Y%m%d_%H%M%S
-}
-/opt/crafter/logs/*.txt {
-    su crafter crafter
-    rotate 10
-    size 100M
-    copytruncate
-    compress
-    missingok
-    dateformat -%Y%m%d_%H%M%S
-}
-/opt/crafter/logs/*.csv {
-    su crafter crafter
-    rotate 10
-    size 100M
-    copytruncate
-    compress
-    missingok
-    dateformat -%Y%m%d_%H%M%S
+    dateformat ${DATE_FORMAT}
 }
 
