--- a/images/logrotate/logrotate.tpl.conf
+++ b/images/logrotate/logrotate.tpl.conf
@@ -5,6 +5,6 @@ ${LOGROTATE_PATTERN} {
     copytruncate
     compress
     missingok
-    dateformat ${DATE_FORMAT}
+    dateformat ${LOGROTATE_DATE_FORMAT}
 }
 
