Added AuthoringTomcatLocal image.

--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,7 @@ ext {
     imagesBuildDir = "${buildDir}/images"
     tempDir = "${buildDir}/temp"
 
+    // TODO remove the following
     libsslUrl = "https://downloads.craftercms.org/ent/lib/libssl1.0.0.tar.gz"
 
     downloadsRootFolder = "${project.version}"
@@ -101,6 +102,20 @@ ext {
         "apache-tomcat/webapps/ROOT",
         "apache-tomcat/webapps/studio",
         "**/*.pid"   
+    ]
+
+    defaultTomcatLocalBinExcludes = [
+            "migration",
+            "upgrade",
+            "mongodb",
+            "apache-tomcat/work/**",
+            "apache-tomcat/temp/**",
+            "apache-tomcat/webapps/crafter-search*",
+            "apache-tomcat/webapps/crafter-social*",
+            "apache-tomcat/webapps/crafter-profile*",
+            "apache-tomcat/webapps/ROOT",
+            "apache-tomcat/webapps/studio",
+            "**/*.pid"
     ]
 }
 
@@ -240,6 +255,33 @@ task buildAuthoringTomcat(group: "Build", description: "Builds the Authoring Tom
 
         exec {
             commandLine 'docker', 'build', '--target', authoringBuildTarget, '-t', "${project.authoringTomcatImageName}:${project.version}", buildDir
+        }
+    }
+}
+
+task buildAuthoringTomcatLocal(group: "Build", description: "Builds the Authoring Tomcat Docker Local image") {
+    dependsOn prepareAuthoringBundle
+    dependsOn copyAuthoringCustomWebapps
+
+    def buildDir = "${imagesBuildDir}/authoring_local/tomcat"
+
+    doFirst {
+        delete buildDir
+    }
+    doLast {
+        copy {
+            from "${imagesDir}/authoring_local/tomcat/"
+            into buildDir
+        }
+
+        copy {
+            from "${authoringBundleRoot}/bin/"
+            into "${buildDir}/bin"
+            exclude defaultTomcatLocalBinExcludes
+        }
+
+        exec {
+            commandLine 'docker', 'build', '--target', authoringBuildTarget, '-t', "${project.authoringTomcatLocalImageName}:${project.version}", buildDir
         }
     }
 }
@@ -401,6 +443,7 @@ task buildLogrotate(group: "Build", description: "Builds the Logrotate Docker im
 task buildMainImages(group: "Build", description: "Builds main Docker images") {
     dependsOn buildLogrotate
     dependsOn buildAuthoringTomcat
+    dependsOn buildAuthoringTomcatLocal
     dependsOn buildDeliveryTomcat
     dependsOn buildDeployer
     dependsOn buildGitSshServer
