--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,5 @@
 authoringTomcatImageName = craftercms/authoring_tomcat
+authoringTomcatLocalImageName = craftercms/authoring_tomcat_local
 authoringTomcatWithImageMagickImageName = craftercms/authoring_tomcat_with_imagemagick
 deliveryTomcatImageName = craftercms/delivery_tomcat
 deployerImageName = craftercms/deployer
