--- a/images/logrotate/Dockerfile
+++ b/images/logrotate/Dockerfile
@@ -15,7 +15,7 @@ FROM alpine:3.16 as main
 
 # Add default variables. Default cron runs the logrotate every hour.
 ENV CRON_SCHEDULE='0 * * * *' \
-    LOGROTATE_PATTERN='/opt/crafter/logs/*.log /opt/crafter/logs/*.txt /opt/crafter/logs/*.csv' \
+    LOGROTATE_PATTERN='/opt/crafter/logs/*/*.log /opt/crafter/logs/*/*.txt /opt/crafter/logs/*/*.csv' \
     LOGROTATE_COPIES='10' \
     LOGROTATE_SIZE='100M' \
     LOGROTATE_DATE_FORMAT='-%Y%m%d_%H%M%S'
