Updated to Java 17 and added a simplified build script.

--- a/images/authoring_local/tomcat/Dockerfile
+++ b/images/authoring_local/tomcat/Dockerfile
@@ -1,4 +1,4 @@
-# Copyright (C) 2007-2021 Crafter Software Corporation. All Rights Reserved.
+# Copyright (C) 2007-2023 Crafter Software Corporation. All Rights Reserved.
 #
 # This program is free software: you can redistribute it and/or modify
 # it under the terms of the GNU General Public License version 3 as published by
@@ -11,7 +11,7 @@
 #
 # You should have received a copy of the GNU General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
-FROM tomcat:9-jdk17-openjdk-slim as main
+FROM tomcat:9-jdk17 as main
 
 # Install dependencies
 ARG DEBIAN_FRONTEND=noninteractive
