--- a/images/deployer/Dockerfile
+++ b/images/deployer/Dockerfile
@@ -1,4 +1,4 @@
-# Copyright (C) 2007-2021 Crafter Software Corporation. All Rights Reserved.
+# Copyright (C) 2007-2023 Crafter Software Corporation. All Rights Reserved.
 #
 # This program is free software: you can redistribute it and/or modify
 # it under the terms of the GNU General Public License version 3 as published by
@@ -11,7 +11,7 @@
 #
 # You should have received a copy of the GNU General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
-FROM openjdk:11-jdk-slim as main
+FROM eclipse-temurin:17-jdk as main
 
 # Install dependencies
 ARG DEBIAN_FRONTEND=noninteractive
