--- a/images/deployer/Dockerfile
+++ b/images/deployer/Dockerfile
@@ -55,7 +55,7 @@ WORKDIR /opt/crafter
 VOLUME [ "/opt/crafter/data", "/opt/crafter/logs"]
 
 # Add the Crafter user
-RUN addgroup -S crafter && adduser -S -u 1000 -G crafter crafter; \
+RUN addgroup -S -g 1000 crafter && adduser -S -u 1000 -G crafter crafter; \
     chown -R crafter:crafter .
 
 # Copy bin folder
