--- a/images/authoring/tomcat/Dockerfile
+++ b/images/authoring/tomcat/Dockerfile
@@ -107,7 +107,7 @@ WORKDIR /opt/crafter
 VOLUME [ "/opt/crafter/data", "/opt/crafter/logs", "/opt/crafter/temp" ]
 
 # Add the Crafter user and the default Git user
-RUN addgroup -S crafter && adduser -S -u 1000 -G crafter crafter; \
+RUN addgroup -S -g 1000 crafter && adduser -S -u 1000 -G crafter crafter; \
     chown -R crafter:crafter .; \
     chown -R crafter:crafter /usr/local/tomcat/; \
     gosu crafter git config --global user.email "evalgit@example.com"; \
