--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,7 @@ plugins {
     id "de.undercouch.download" version "4.0.4"
 }
 
-project.version = project.hasProperty("tag") ? project.property("tag") : "3.1.31" // craftercms version flag
+project.version = project.hasProperty("tag") ? project.property("tag") : "3.1.32-SNAPSHOT" // craftercms version flag
 
 ext {
     imagesDir = "${projectDir}/images"
