Update docker-entryproint.sh to start without root

--- a/images/git_https_server/conf/extra/httpd-vhosts.conf
+++ b/images/git_https_server/conf/extra/httpd-vhosts.conf
@@ -7,7 +7,7 @@
 # use only name-based virtual hosts so the server doesn't need to worry about
 # IP addresses. This is indicated by the asterisks in the directives below.
 #
-# Please see the documentation at 
+# Please see the documentation at
 # <URL:http://httpd.apache.org/docs/2.4/vhosts/>
 # for further details before you try to setup virtual hosts.
 #
@@ -39,7 +39,7 @@
 
 <VirtualHost *:443>
     ServerAdmin webmaster@localhost
-    ServerName example.com:443    
+    ServerName example.com:443
 
     SetEnv GIT_PROJECT_ROOT ${GIT_REPOS_ROOT}
     SetEnv GIT_HTTP_EXPORT_ALL
@@ -62,8 +62,8 @@
     SSLEngine on
     SSLCertificateFile "${SSL_CERT_FILE_PATH}"
     SSLCertificateKeyFile "${SSL_PRIV_KEY_FILE_PATH}"
-       
-    ErrorLog "logs/error.log"
+
+    ErrorLog "/opt/crafter/apache2/logs/error.log"
     LogLevel warn
-    CustomLog "logs/access.log" combined
+    CustomLog "/opt/crafter/apache2/logs/access.log" combined
 </VirtualHost>
