--- a/images/authoring_local/tomcat/Dockerfile
+++ b/images/authoring_local/tomcat/Dockerfile
@@ -145,6 +145,9 @@ RUN sed -i '/export CATALINA_HOME=$CRAFTER_BIN_DIR\/apache-tomcat/d' ./bin/craft
 COPY docker-entrypoint.sh .
 RUN chmod +x docker-entrypoint.sh
 
+# Run the application as crafter user
+USER crafter
+
 # Expose debug port
 EXPOSE 8000
 
