--- a/images/git_https_server/Dockerfile
+++ b/images/git_https_server/Dockerfile
@@ -20,7 +20,8 @@ RUN apk update && apk upgrade
 RUN apk add --no-cache bash shadow git git-daemon su-exec vim nano
 
 # Create folders for crafter user
-RUN mkdir -p /opt/crafter/data
+RUN mkdir -p /opt/crafter/data; \
+    mkdir -p /opt/crafter/apache2/logs;
 
 # Create volumes
 VOLUME [ "/opt/crafter/data" ]
@@ -31,7 +32,7 @@ RUN groupadd -r -g 1000 crafter && useradd -r -m -u 1000 -g crafter crafter; \
 
 # Set default values for env variables
 ENV GIT_REPOS_ROOT=/opt/crafter/data/repos
-ENV PASSWD_FILE_PATH="/usr/local/apache2/.htpasswd"
+ENV PASSWD_FILE_PATH="/opt/crafter/apache2/.htpasswd"
 ENV SSL_CERT_FILE_PATH="/usr/local/apache2/conf/server.crt"
 ENV SSL_PRIV_KEY_FILE_PATH="/usr/local/apache2/conf/server.key"
 
@@ -41,6 +42,11 @@ COPY ./conf ./conf/
 # Copy entrypoint script and make it executable
 COPY docker-entrypoint.sh .
 RUN chmod +x docker-entrypoint.sh
+
+RUN chown -R crafter:crafter /opt/crafter/;
+
+# Run the application as crafter user
+USER crafter
 
 # Expose HTTPS port
 EXPOSE 443
