Update ssh and https server to use /home/crafter as the application folder

--- a/images/git_https_server/conf/extra/httpd-vhosts.conf
+++ b/images/git_https_server/conf/extra/httpd-vhosts.conf
@@ -63,7 +63,7 @@
     SSLCertificateFile "${SSL_CERT_FILE_PATH}"
     SSLCertificateKeyFile "${SSL_PRIV_KEY_FILE_PATH}"
 
-    ErrorLog "/opt/crafter/apache2/logs/error.log"
+    ErrorLog "${APACHE_HOME}/logs/error.log"
     LogLevel warn
-    CustomLog "/opt/crafter/apache2/logs/access.log" combined
+    CustomLog "${APACHE_HOME}/logs/access.log" combined
 </VirtualHost>
