--- a/images/git_https_server/conf/httpd.conf
+++ b/images/git_https_server/conf/httpd.conf
@@ -29,7 +29,7 @@
 # least PidFile.
 #
 ServerRoot "/usr/local/apache2"
-PidFile "/opt/crafter/apache2/logs/httpd.pid"
+PidFile "${APACHE_HOME}/logs/httpd.pid"
 #
 # Mutex: Allows you to set the mutex mechanism and mutex file directory
 # for individual mutexes, or change the global defaults
@@ -409,7 +409,7 @@ LogLevel warn
     # socket used to communicate with the CGI daemon of mod_cgid.
     #
     # ScriptSock cgisock
-    ScriptSock /opt/crafter/apache2/logs/cgisock
+    ScriptSock ${APACHE_HOME}/logs/cgisock
 </IfModule>
 
 #
